Fixed pillars overflowing

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -51,10 +51,10 @@
 }
 
 #pillars {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(150px, 1fr));
     justify-content: space-evenly;
-    gap: 1rem;
+    gap: 0.75rem;
 }
 
 .pillar {
